--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,92 @@ img {
     background-color: var(--white-color);
 }
 
+/* modal-form */
+.input-container {
+    display: block;
+    position: relative;
+    width: 448px;
+    height: 40px;
+
+    /* padding-top: 18px; */
+    margin-right: auto;
+    margin-left: auto;
+    /* margin-top: 18px; */
+    /* background-color: #C4C4C4; */
+
+
+}
+
+.label-form {
+    display: block;
+    text-align: start;
+    position: absolute;
+    top: 13px;
+    left: 42px;
+
+
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    transition: transform var(--fast-time) var(--easy-in-out);
+}
+
+.input-form {
+    padding-left: 42px;
+
+    display: block;
+    width: 100%;
+    height: 40px;
+
+    z-index: 5;
+    border: 0;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    /* background-color: transparent; */
+}
+
+.input-form:focus {
+    border: 1px solid var(--blue-color);
+    outline: transparent;
+
+}
+
+.input-form:focus~.input-icon {
+    fill: var(--blue-color);
+}
+
+
+.input-form:focus~.label-form {
+
+    transform: translate(-42px, -31px);
+
+}
+
+.input-icon {
+    display: block;
+    position: absolute;
+    left: 12px;
+    top: 11px;
+
+    z-index: 0;
+}
+
+.title-form {
+    display: block;
+
+    margin-top: 40px;
+    margin-bottom: 30px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.17;
+}
+
+
 
 /* ================== */
 /*     BENEFITS */
