--- a/css/styles.css
+++ b/css/styles.css
@@ -532,6 +532,10 @@ img {
 }
 
 /* modal-form */
+.modal-form {
+    margin-top: 40px;
+}
+
 .input-container {
     display: block;
     position: relative;
@@ -541,11 +545,14 @@ img {
     /* padding-top: 18px; */
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 28px;
     /* margin-top: 18px; */
     /* background-color: #C4C4C4; */
-
-
 }
+
+/* .input-container:last-child {
+    margin-bottom: 0;
+} */
 
 .label-form {
     display: block;
@@ -608,12 +615,35 @@ img {
 .title-form {
     display: block;
 
-    margin-top: 40px;
+
     margin-bottom: 30px;
 
     font-weight: 700;
     font-size: 20px;
     line-height: 1.17;
+}
+
+.label-form-comment {
+    display: block;
+    text-align: start;
+
+    margin-left: 41px;
+    margin-bottom: 4px;
+    margin-top: -28px;
+
+}
+
+.textarea-form-comment {
+    display: block;
+    text-align: start;
+    resize: none;
+    width: 448px;
+    height: 120px;
+
+    padding: 12px 16px;
+    margin-right: auto;
+    margin-left: auto;
+
 }
 
 
