--- a/css/styles.css
+++ b/css/styles.css
@@ -570,6 +570,7 @@ img {
     transition: transform var(--fast-time) var(--easy-in-out);
 }
 
+
 .input-form {
     padding-left: 42px;
 
@@ -589,15 +590,17 @@ img {
 .input-form:focus {
     border: 1px solid var(--blue-color);
     outline: transparent;
-
 }
+
+
 
 .input-form:focus~.input-icon {
     fill: var(--blue-color);
 }
 
 
-.input-form:focus~.label-form {
+.input-form:focus~.label-form,
+.input-form:not(:placeholder-shown)~.label-form {
 
     transform: translate(-42px, -31px);
 
@@ -623,13 +626,35 @@ img {
     line-height: 1.17;
 }
 
+.textarea-container {
+    position: relative;
+    width: 448px;
+
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
+
+
+}
+
 .label-form-comment {
     display: block;
     text-align: start;
 
-    margin-left: 41px;
-    margin-bottom: 4px;
-    margin-top: -28px;
+    position: absolute;
+    top: -18px;
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+
+
+
+
+    /* margin-left: 41px; */
+    /* margin-bottom: 4px; */
+    /* margin-top: 18px; */
 
 }
 
@@ -637,15 +662,29 @@ img {
     display: block;
     text-align: start;
     resize: none;
-    width: 448px;
+    width: 100%;
     height: 120px;
 
     padding: 12px 16px;
     margin-right: auto;
     margin-left: auto;
 
+    /* font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5); */
 }
 
+.checkbox-container {
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+
+    margin-bottom: 30px;
+
+}
 
 
 /* ================== */
