--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@
     --bg-work-description: rgba(47, 48, 58, 0.8);
     --bg-portfolio-description: rgba(33, 150, 243, 0.9);
     --bg-backdrop: rgba(0, 0, 0, 0.2);
+    --border-col-form: rgba(33, 33, 33, 0.2);
+    --placeholder-color: rgba(117, 117, 117, 0.5);
+
     /* portfolio */
     --background-color-portfolio-btn: #F5F4FA;
     --brd-cl-portfolio-fig: #EEEEEE;
@@ -542,17 +545,12 @@ img {
     width: 448px;
     height: 40px;
 
-    /* padding-top: 18px; */
+
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 28px;
-    /* margin-top: 18px; */
-    /* background-color: #C4C4C4; */
-}
 
-/* .input-container:last-child {
-    margin-bottom: 0;
-} */
+}
 
 .label-form {
     display: block;
@@ -561,7 +559,7 @@ img {
     top: 13px;
     left: 42px;
 
-
+    cursor: pointer;
 
     font-size: 12px;
     line-height: 1.16;
@@ -581,10 +579,12 @@ img {
     z-index: 5;
     border: 0;
 
-    border: 1px solid rgba(33, 33, 33, 0.2);
+    border: 1px solid var(--border-col-form);
+
     border-radius: 4px;
 
-    /* background-color: transparent; */
+    cursor: pointer;
+
 }
 
 .input-form:focus {
@@ -592,12 +592,9 @@ img {
     outline: transparent;
 }
 
-
-
 .input-form:focus~.input-icon {
     fill: var(--blue-color);
 }
-
 
 .input-form:focus~.label-form,
 .input-form:not(:placeholder-shown)~.label-form {
@@ -618,7 +615,6 @@ img {
 .title-form {
     display: block;
 
-
     margin-bottom: 30px;
 
     font-weight: 700;
@@ -634,7 +630,6 @@ img {
     margin-left: auto;
     margin-bottom: 20px;
 
-
 }
 
 .label-form-comment {
@@ -648,14 +643,7 @@ img {
     line-height: 1.16;
     letter-spacing: 0.01em;
 
-
-
-
-
-    /* margin-left: 41px; */
-    /* margin-bottom: 4px; */
-    /* margin-top: 18px; */
-
+    cursor: pointer;
 }
 
 .textarea-form-comment {
@@ -669,21 +657,100 @@ img {
     margin-right: auto;
     margin-left: auto;
 
-    /* font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.01em;
+    border: 1px solid var(--border-col-form);
+    border-radius: 4px;
 
-    color: rgba(117, 117, 117, 0.5); */
+    cursor: pointer;
 }
 
-.checkbox-container {
+.textarea-form-comment:focus {
+    border: 1px solid var(--blue-color);
+    outline: transparent;
+}
+
+.textarea-form-comment::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+
+    color: var(--placeholder-color);
+
+}
+
+/* Політика приватності (чекбокс) */
+.form-policy-group {
     display: flex;
+    align-items: center;
     justify-content: center;
 
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+.checkbox {
+    appearance: none;
+
+}
+
+.custom-checkbox {
+    display: flex;
+    justify-content: center;
     align-items: center;
 
-    margin-bottom: 30px;
+    margin-right: 7px;
 
+    width: 16px;
+    height: 15px;
+    outline: 2px solid black;
+    outline-offset: -2px;
+    border-radius: 2px;
+
+}
+
+.custom-checkbox-icon {
+    opacity: 0;
+    transition: opacity var(--fast-time) var(--easy-in-out);
+}
+
+.checkbox:checked+.custom-checkbox {
+
+    outline: 2px solid var(--blue-color);
+}
+
+.checkbox:checked+.custom-checkbox .custom-checkbox-icon {
+    opacity: 1;
+}
+
+.contract-form {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    letter-spacing: inherit;
+
+    color: var(--blue-color);
+}
+
+/* Кнопка */
+.form-btn {
+    padding: 10px 55px;
+    background-color: var(--blue-color);
+
+    color: var(--white-color);
+    cursor: pointer;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.86;
+    letter-spacing: 0.06em;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+}
+
+.form-btn:focus,
+.form-btn:hover {
+    background-color: var(--bg-cl-hero-btn-hover);
 }
 
 
