--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,7 @@ img {
 /* social-networks */
 .social-networks-footer {
     margin-top: 12px;
+    margin-right: 93px;
     /* align-items: baseline; */
 }
 
@@ -372,12 +373,67 @@ img {
 .list-footer-icons {
     display: flex;
     max-height: 44px;
-    /* background-color: teal; */
+
 }
 
 .item-footer-icons:not(:last-child) {
     margin-right: 10px;
 }
+
+/* footer-form */
+.footer-form {
+    display: block;
+
+    margin-top: 12px;
+}
+
+.label-footer {
+    display: block;
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.17;
+    text-transform: uppercase;
+
+
+    color: var(--white-color);
+}
+
+.input-footer {
+    width: 358px;
+    height: 50px;
+
+    border: none;
+    outline: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: transparent;
+
+    padding: 15px 16px;
+    margin-right: 12px;
+
+    color: var(--link-contact-footer);
+}
+
+/* .input-footer:checked {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+} */
+
+.input-footer::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+
+
+    color: var(--link-contact-footer);
+}
+
+.footer-btn-form {
+    /* display: flex; */
+    padding: 10px 28px;
+    width: 200px;
+    height: 50px;
+}
+
 
 
 /* =============================================== */
@@ -585,6 +641,7 @@ img {
 
     cursor: pointer;
 
+    transition: border var(--fast-time) var(--easy-in-out);
 }
 
 .input-form:focus {
@@ -661,6 +718,8 @@ img {
     border-radius: 4px;
 
     cursor: pointer;
+
+    transition: border var(--fast-time) var(--easy-in-out);
 }
 
 .textarea-form-comment:focus {
@@ -746,6 +805,8 @@ img {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
+
+    transition: background-color var(--fast-time) var(--easy-in-out);
 }
 
 .form-btn:focus,
