--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,7 @@ img {
 
 .input-footer {
     width: 358px;
-    height: 50px;
+    max-height: 50px;
 
     border: none;
     outline: 1px solid rgba(255, 255, 255, 0.3);
@@ -418,9 +418,6 @@ img {
     line-height: 1.25;
 }
 
-/* .input-footer:checked {
-    border: 1px solid rgba(255, 255, 255, 0.3);
-} */
 
 .input-footer::placeholder {
     font-size: 16px;
@@ -465,6 +462,7 @@ img {
 
 .input-btn-form-footer {
     display: flex;
+    max-height: 50px;
 }
 
 
@@ -510,7 +508,7 @@ img {
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-    color: #FFFFFF;
+    color: var(--white-color);
 }
 
 /* button */
@@ -864,7 +862,7 @@ img {
 .list-benefits {
     display: flex;
     justify-content: space-between;
-    /* margin-bottom: -94px; */
+
 }
 
 .list-benefits .item {
@@ -954,8 +952,6 @@ img {
     color: var(--white-color);
 
 }
-
-
 
 /* ================== */
 /*      OUR TEAM */
@@ -1054,7 +1050,6 @@ img {
     width: 44px;
     height: 44px;
 
-    /* background-color: teal; */
     border-radius: 50%;
 
     fill: var(--grey-cl-icons);
@@ -1091,18 +1086,15 @@ img {
     width: 170px;
     height: 92px;
 
-    /* padding: 16px 32px; */
 
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 
     fill: var(--grey-cl-icons);
 
-    /* background-color: teal; */
 
     transition: fill var(--fast-time) var(--easy-in-out),
         border var(--fast-time) var(--easy-in-out);
-
 
 }
 
@@ -1208,11 +1200,9 @@ img {
 
 .portfolio-figure {
 
-
     width: 370px;
     margin: 0;
 
-    /* background-color: tomato; */
 }
 
 .title-cards {
@@ -1252,8 +1242,6 @@ img {
     height: 294px;
 
     transition: transform var(--fast-time) var(--easy-in-out);
-
-
 
     background-color: var(--bg-portfolio-description);
 
